demo-docker-quarkus/getting-started/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jvm-vs     
spec:
  hosts:
  - "*"
  gateways:
  - jvm-gateway
  http:
  - match:
    - uri:
        exact: /jvm
    route:
    - destination:
        host: masterspringboot-git
        port:
          number: 8080
